<resources>
    <string name="app_name">Jogos Tabuleiro</string>
    <string name="playerOne">Jogador 1</string>
    <string name="playerTwo">Jogador 2</string>
    <string name="playerOneWin">Jogador 1 venceu!</string>
    <string name="playerTwoWin">Jogador 2 venceu!</string>
    <string name="playerOneLose">Jogador 1 perdeu!</string>
    <string name="playerTwoLose">Jogador 2 perdeu!</string>
    <string name="playAgain">Jogar novamente =)</string>
    <string name="play">Jogar!</string>
    <string name="nameRequired">Informe o nome!</string>
    <string name="winner">venceu!</string>
    <string name="looser">perdeu!</string>
    <string name="sortWith">Sortear com: </string>
    <string name="or">Ou</string>
    <string name="contadores">Contadores</string>
    <string name="sorteios">Sorteios</string>
    <string name="inputNames">Digite o nome dos jogadores: </string>
    <string name="historic_dices">dados</string>
    <string name="historic_jokempo">jokempo</string>
    <string name="historic_sort">sorteio</string>
    <string name="historic_empty">Nenhnum historico registrado.</string>
    <string name="historic_in">no</string>
    <string name="historic_win">venceu</string>
    <string name="historic_button">Ver Historico</string>
</resources>
