<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1c484a">

        <TextView
            android:id="@+id/contadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/clock_menu_button"
            android:onClick="onClickCount"
            android:text="@string/contadores"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sorteio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/contadores"
            android:layout_marginRight="70dp"
            android:clickable="true"
            android:drawableTop="@drawable/dices_menu_button"
            android:onClick="onClickSort"
            android:text="@string/sorteios"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>